--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/platform-browser": "^17.3.6",
     "@angular/platform-browser-dynamic": "^17.3.6",
     "@angular/router": "^17.3.6",
+    "@prisma/client": "^5.13.0",
+    "express": "^4.19.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.4"
@@ -25,6 +27,7 @@
     "@angular/cli": "~17.3.6",
     "@angular/compiler-cli": "^17.3.6",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.12.7",
     "autoprefixer": "^10.4.19",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -33,7 +36,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.38",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.4.3",
+    "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   }
 }
