--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@angular/cli": "^17.3.6",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "prisma": "^5.13.0",
