--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
     "@angular/cli": "^17.3.6",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.12.8",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
